tests/snapshots/examples_fixtures/type_system__failing__125_string_interpolation_missing_close_brace.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/125_string_interpolation_missing_close_brace.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Closing Delimiter

Expected `}` to close string interpolation.

  examples/type_system/failing/125_string_interpolation_missing_close_brace.flx:36:24
   |
36 | let msg = "Hello #{name"
   |                        ^

Hint:
  Interpolation segments use `#{expr}` inside strings.


error[E071]: Unterminated String

String literal is missing closing quote.

  examples/type_system/failing/125_string_interpolation_missing_close_brace.flx:36:24
   |
36 | let msg = "Hello #{name"
   |                        ^

Hint:
  Add a closing " at the end of the string.

Found 2 errors.
== stdout ==
<not executed>
